fix(buttons): remove unwanted margin-right on right-aligned buttons

--- a/src/_flat.less
+++ b/src/_flat.less
@@ -261,6 +261,10 @@ body.flat {
   // ---------------------------------------------------------------------------
   :is(.dijitButton, .dijitComboButton, .dijitDropDownButton, .dijitToggleButton, .dijitSelect, .dijitTextBox) {
     margin: 4px 4px 4px 0;
+
+    &.pull-right {
+      margin-inline: 4px 0;
+    }
   }
   :is(.dijitDialog footer, .dijitDialog .dlgButtons) :last-child {
     margin-right: 0;
